// Copyright 2023 The Elastic AI Search Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax="proto2";
package EA.servlet;
option cc_generic_services = true;

enum RW {
  READ  = 1;
  WRITE = 2;
};

message PrivilegeZone {
  required string zone   = 1;
  optional int64 zone_id = 2;
  optional RW zone_rw    = 3;
  optional bool force        = 4;
};

message PrivilegeServlet {
  required string zone   = 1;
  optional int64 zone_id = 2;
  required string servlet_name = 3;
  optional int64 servlet_id    = 4;
  optional RW servlet_rw       = 5;
  optional bool force        = 6;
};


message UserPrivilege {
  required string             username                      = 1;
  optional string             password                      = 2;
  required string             namespace_name                = 3;
  optional int64              namespace_id                  = 4;
  repeated PrivilegeZone      privilege_zone                = 7;
  repeated PrivilegeServlet   privilege_servlet             = 8;
  repeated string             bns                           = 9;
  repeated string             ip                            = 10;
  optional int64              version                       = 11;
  optional bool               need_auth_addr                = 13;
  optional string             resource_tag                  = 14; // 优先访问的store resource_tag
  optional string             token                         = 20;
};